vpc.tf
locals {
<<<<<<< HEAD
<<<<<<< HEAD
<<<<<<< HEAD
  public_cidr        = ["10.0.0.0/24", "10.0.1.0/24"]
  private_cidr       = ["10.0.100.0/24", "10.0.101.0/24"]
=======
>>>>>>> 20ca788 (used variables to define envcode and public/private cidrs)
  availability_zones = ["us-west-1a", "us-west-1b"]
=======
  public_cidr        = ["10.0.0.0/24", "10.0.1.0/24", "10.0.2.0/24"]
  private_cidr       = ["10.0.100.0/24", "10.0.101.0/24", "10.0.103.0/24"]
  availability_zones = ["us-west-1a", "us-west-1b", "us-west-1c"]
>>>>>>> da2defa (used count and global local variables)
=======
  public_cidr        = ["10.0.0.0/24", "10.0.1.0/24"]
  private_cidr       = ["10.0.100.0/24", "10.0.101.0/24"]
  availability_zones = ["us-west-1a", "us-west-1b"]
>>>>>>> 71d114b (UPDATED used count and global local variables)
}

resource "aws_vpc" "main" {
  cidr_block = var.vpc_cidr

  tags = {
    Name = var.env_code
  }
}

resource "aws_subnet" "public" {
  count = length(var.public_cidr)

  vpc_id            = aws_vpc.main.id
  cidr_block        = var.public_cidr[count.index]
  availability_zone = local.availability_zones[count.index]

  tags = {
    Name = "${var.env_code}-public${count.index + 1}"
  }
}

resource "aws_subnet" "private" {
  count = length(var.private_cidr)

  vpc_id            = aws_vpc.main.id
  cidr_block        = var.private_cidr[count.index]
  availability_zone = local.availability_zones[count.index]

  tags = {
    Name = "${var.env_code}-private${count.index + 1}"
  }
}


resource "aws_internet_gateway" "main" {
  vpc_id = aws_vpc.main.id

  tags = {
    Name = var.env_code
  }
}

resource "aws_route_table" "public" {
  vpc_id = aws_vpc.main.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.main.id
  }

  tags = {
    Name = var.env_code
  }
}

resource "aws_route_table_association" "public" {
  count = length(var.public_cidr)

  subnet_id      = aws_subnet.public[count.index].id
  route_table_id = aws_route_table.public.id
}

resource "aws_eip" "nat" {
  count = length(var.public_cidr)

  vpc = true

  tags = {
    Name = "${var.env_code}-nat${count.index + 1}"
  }
}

resource "aws_nat_gateway" "main" {
  count = length(var.public_cidr)

  allocation_id = aws_eip.nat[count.index].id
  subnet_id     = aws_subnet.public[count.index].id

  tags = {
    Name = "${var.env_code}-main${count.index + 1}"
  }

  # To ensure proper ordering, it is recommended to add an explicit dependency
  # on the Internet Gateway for the VPC.
  depends_on = [aws_internet_gateway.main]
}

resource "aws_route_table" "private" {
  count = length(var.private_cidr)

  vpc_id = aws_vpc.main.id

  route {
    cidr_block     = "0.0.0.0/0"
    nat_gateway_id = aws_nat_gateway.main[count.index].id
  }

  tags = {
    Name = "${var.env_code}-private${count.index + 1}"
  }
}

resource "aws_route_table_association" "private" {
  count = length(var.private_cidr)

  subnet_id      = aws_subnet.private[count.index].id
  route_table_id = aws_route_table.private[count.index].id
}
